Remove redundant Collectors.toList()